--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- saved from url=(0019)file:///tmp/27.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <link href="./index_files/github-markdown.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <style>
-    	@import url('http://fonts.googleapis.com/css?family=Open+Sans');
 
         body {
             font-family: 'Open Sans', sans-serif;
