--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <style>
-    	@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+    	/*@import url('http://fonts.googleapis.com/css?family=Open+Sans');*/
 
         body {
-            font-family: 'Open Sans', sans-serif;
+            /*font-family: 'Open Sans', sans-serif;*/
             font-size: 16px;
         	line-height : 28px;
         }
