--- a/S06/code/index.html
+++ b/S06/code/index.html
@@ -1,111 +1,165 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ascension | Crossed Banners</title>
-	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="semantic/dist/semantic.min.js"></script>
-	<meta content='width=device-width, initial-scale=1' name='viewport'/>
-	<script>
-	  $(document)
-	    .ready(function() {
+	<head>
+		<title>Ascension | Crossed Banners</title>
+		<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="semantic/dist/semantic.min.js"></script>
+		<meta content='width=device-width, initial-scale=1' name='viewport'/>
+		<script>
+		$(document)
+		.ready(function() {
+		// create sidebar and attach to menu open
+		$('.ui.sidebar')
+		.sidebar('attach events', '.toc.item')
+		;
+		})
+		;
+		</script>
+	</head>
+	<body>
+		<!-- Sidebar Menu -->
+		<div class="ui inverted vertical sidebar menu">
+			<a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
+			<a href="http://ascension.hype.hk" class="item">Rules</a>
+			<a class="item disabled">Leaderboard</a>
+		</div>
+		<!-- Page Contents -->
+		<div class="pusher">
+			<div class="ui vertical masthead center aligned segment">
+				<div class="ui container">
+					<div class="ui large secondary pointing menu">
+						<a class="toc item">
+							<i class="sidebar icon"></i>
+						</a>
+						<a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
+						<a href="http://ascension.hype.hk" class="item">Rules</a>
+						<a class="item disabled">Leaderboard</a>
+					</div>
+				</div>
+				<div class="ui text container">
+					<h1 class="ui inverted header">
+					<!-- Ascension | Crossed Banners -->
+					</h1>
+					<div class="ui huge primary button">Play<i class="right arrow icon"></i></div>
+				</div>
+			</div>
+			<div class="ui hidden failed negative message">
+				<i class="close icon"></i>
+				<div class="header">
+					We're sorry - Login failed for some reason.
+				</div>
+				<p>Please contact m@type.hk for support.
+				</p></div>
+				<div class="ui vertical stripe center segment description">
+					<div class="ui middle aligned stackable grid container">
+						<div class="row">
+							<div class="sixteen wide center column">
+								<h3 class="ui header">Ascension | Crossed Banners</h3>
+								<p>Ascension is an online text-based game played alongside season 6 of HBO's Game of Thrones. You play by selecting your favourite characters, and having them compete in award categories of wit, damage, jockey, style and support. Points are awarded by fellow players whom cast votes each episode.</p>
+								<p>It is similar to fantasy football, as you build up a roster of characters at the start of the season, and get points for their performance in each episode.</p>
+								<p>In keeping with the Game of Thrones logic, you can also send your characters on diplomatic and murder missions; gathering intelligence or taking out characters from other player's rosters. But be careful! Failed attempts leave you exposed! Plot at your own peril...</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="center aligned column">
+								<a href="http://ascension.hype.hk" class="ui huge button">Read the Rules</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--   <div class="ui vertical stripe quote segment">
+					<div class="ui equal width stackable internally celled grid">
+						<div class="center aligned row">
+							<div class="column">
+								<h3>"What a Company"</h3>
+								<p>That is what they all say about us</p>
+							</div>
+							<div class="column">
+								<h3>"I shouldn't have gone with their competitor."</h3>
+								<p>
+									<img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="ui vertical stripe segment">
+					<div class="ui text container">
+						<h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
+						<p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
+						<a class="ui large button">Read More</a>
+						<h4 class="ui horizontal header divider">
+						<a href="#">Case Studies</a>
+						</h4>
+						<h3 class="ui header">Did We Tell You About Our Bananas?</h3>
+						<p>Yes I know you probably disregarded the earlier boasts as non-sequitor filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
+						<a class="ui large button">I'm Still Quite Interested</a>
+					</div>
+				</div> -->
+			</div>
+			<script type="text/javascript">
 
-	      // create sidebar and attach to menu open
-	      $('.ui.sidebar')
-	        .sidebar('attach events', '.toc.item')
-	      ;
+			var db = new Firebase("https://ascension.firebaseio.com");
 
-	    })
-	  ;
-	  </script>
-</head>
-<body>
+			var USER_TEMPLATE = {
+			        "full_name" : "",
+			        "first_name" : "",
+			        "alias" : "",
+			        "alias_short" : "",
+			        "email": "",
+			        "facebook" : "",
+			        "games": true
+			    }
 
-<!-- Sidebar Menu -->
-<div class="ui inverted vertical sidebar menu">
-  <a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
-  <a href="http://ascension.hype.hk" class="item">Rules</a>
-  <a class="item disabled">Leaderboard</a>
-</div>
+			function is_player(authData){
+			    db.child('players')
+			      .child(authData.uid)
+			      .once('value', function(snapshot){
+			        // if data exists
+			        if (snapshot.exists()) {
+			            // get the ref (in this case /users/2) and update its contents
+			            console.log("User exists!");
+			            // snapshot.ref().update(user);
+			            window.location.href = 'game.html';
+			        } else {
+			            console.log('new')
+			            // data does not exist so we wrap the data in an object with
+			            // a member named after the uid so we can pass it as an update
+			            // to the parent.
+			            var fb = authData.facebook;
+			            var payload = {};
+			                user = USER_TEMPLATE;
+			                user['full_name'] = fb.displayName;
+			                user['email'] = fb.email;
+			                user['facebook'] = fb.id;
+			                try{
+			                    user['first_name'] = fb.cachedUserProfile.first_name;
+			                }
+			                catch(e){
+			                    user['first_name'] = 'Anon';    
+			                }
 
+			                payload[authData.uid] = user;
+			            // get the ref's parent and call update on it.
+			            snapshot.ref().parent().update(payload);
+			            window.location.href = 'signup.html';
+			        }
+			    });
+			    
+			}
 
-<!-- Page Contents -->
-<div class="pusher">
-  <div class="ui vertical masthead center aligned segment">
+			db.authWithOAuthRedirect("facebook", function(error, authData) {
+			  if (error) {
 
-    <div class="ui container">
-      <div class="ui large secondary pointing menu">
-        <a class="toc item">
-          <i class="sidebar icon"></i>
-        </a>
-        <a href="http://tijptjik.github.io/ascension/" class="active item">Home</a>
-  		<a href="http://ascension.hype.hk" class="item">Rules</a>
-  		<a class="item disabled">Leaderboard</a>
-      </div>
-    </div>
+			    $('.message.failed')
+			      .transition('drop');
 
-    <div class="ui text container">
-      <h1 class="ui inverted header">
-        <!-- Ascension | Crossed Banners -->
-      </h1>
-      <a href="app.html" class="ui huge primary button">Play<i class="right arrow icon"></i></a>
-    </div>
-
-  </div>
-
-  <div class="ui vertical stripe center segment description">
-    <div class="ui middle aligned stackable grid container">
-      <div class="row">
-        <div class="sixteen wide center column">
-          <h3 class="ui header">Ascension | Crossed Banners</h3>
-	          <p>Ascension is an online text-based game played alongside season 6 of HBO's Game of Thrones. You play by selecting your favourite characters, and having them compete in award categories of wit, damage, jockey, style and support. Points are awarded by fellow players whom cast votes each episode.</p>
-
-			<p>It is similar to fantasy football, as you build up a roster of characters at the start of the season, and get points for their performance in each episode.</p>
-
-			<p>In keeping with the Game of Thrones logic, you can also send your characters on diplomatic and murder missions; gathering intelligence or taking out characters from other player's rosters. But be careful! Failed attempts leave you exposed! Plot at your own peril...</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="center aligned column">
-          <a href="http://ascension.hype.hk" class="ui huge button">Read the Rules</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-<!--   <div class="ui vertical stripe quote segment">
-    <div class="ui equal width stackable internally celled grid">
-      <div class="center aligned row">
-        <div class="column">
-          <h3>"What a Company"</h3>
-          <p>That is what they all say about us</p>
-        </div>
-        <div class="column">
-          <h3>"I shouldn't have gone with their competitor."</h3>
-          <p>
-            <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="ui vertical stripe segment">
-    <div class="ui text container">
-      <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
-      <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
-      <a class="ui large button">Read More</a>
-      <h4 class="ui horizontal header divider">
-        <a href="#">Case Studies</a>
-      </h4>
-      <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-      <p>Yes I know you probably disregarded the earlier boasts as non-sequitor filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
-      <a class="ui large button">I'm Still Quite Interested</a>
-    </div>
-  </div> -->
-</div>
-
-</body>
-</html>
+			  } else {
+			    is_player(authData);
+			  }
+			},{'remember':'default','scope':'public_profile,email'});
+			</script>
+		</body>
+	</html>
