--- a/S06/code/index.html
+++ b/S06/code/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 
-	    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 		<script src="semantic/dist/semantic.min.js"></script>
 
