Attempt to max scale

--- a/S06/code/index.html
+++ b/S06/code/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	    <meta charset="utf-8" />
 		<title>Ascension | Crossed Banners</title>
 		<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
@@ -9,7 +10,9 @@
 	    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 		<script src="semantic/dist/semantic.min.js"></script>
 
-	    <meta content='width=device-width, initial-scale=1' name='viewport'/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+	    <meta name="MobileOptimized" content="320">
 	</head>
 	<body>
 		<!-- Sidebar Menu -->
